--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
+<!DOCTYPE>
+<html>
 
+<head>
+    <title>JavaScript Calculator</title>
+    <link rel="" type="" href="css/styles.css">
+</head>
+
+<body>
+    <main>
+        <div class="wrapper">
+            <div class="calculator">
+                <button type="button">AC</button>
+                <button type="button">CE</button>
+                <button type="button">%</button>
+                <button type="button">divide</button>
+                <button type="button">7</button>
+                <button type="button">8</button>
+                <button type="button">9</button>
+                <button type="button">x</button>
+                <button type="button">4</button>
+                <button type="button">5</button>
+                <button type="button">6</button>
+                <button type="button">-</button>
+                <button type="button">1</button>
+                <button type="button">2</button>
+                <button type="button">3</button>
+                <button type="button">0</button>
+                <button type="button">.</button>
+                <button type="button">=</button>
+                <button type="button">=</button>
+            </div>
+
+        </div>
+    </main>
+</body>
+
+</html>
