--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button type="button">0</button>
                 <button type="button">.</button>
                 <button type="button">=</button>
-                <button type="button">=</button>
+                <button type="button">+</button>
             </div>
 
         </div>
