--- a/index.html
+++ b/index.html
@@ -3,32 +3,33 @@
 
 <head>
     <title>JavaScript Calculator</title>
-    <link rel="" type="" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <main>
         <div class="wrapper">
             <div class="calculator">
-                <button type="button">AC</button>
-                <button type="button">CE</button>
-                <button type="button">%</button>
-                <button type="button">divide</button>
-                <button type="button">7</button>
-                <button type="button">8</button>
-                <button type="button">9</button>
-                <button type="button">x</button>
-                <button type="button">4</button>
-                <button type="button">5</button>
-                <button type="button">6</button>
-                <button type="button">-</button>
-                <button type="button">1</button>
-                <button type="button">2</button>
-                <button type="button">3</button>
-                <button type="button">0</button>
-                <button type="button">.</button>
-                <button type="button">=</button>
-                <button type="button">+</button>
+                <div id="output"></div>
+                <button id="AC" type="button">AC</button>
+                <button id="CE" type="button">CE</button>
+                <button id="%" type="button">%</button>
+                <button id="/" type="button">/</button>
+                <button id="7" type="button">7</button>
+                <button id="8" type="button">8</button>
+                <button id="9" type="button">9</button>
+                <button id="x" type="button">x</button>
+                <button id="4" type="button">4</button>
+                <button id="5" type="button">5</button>
+                <button id="6" type="button">6</button>
+                <button id="-" type="button">-</button>
+                <button id="1" type="button">1</button>
+                <button id="2" type="button">2</button>
+                <button id="3" type="button">3</button>
+                <button id="0" type="button">0</button>
+                <button id="." type="button">.</button>
+                <button id="=" type="button">=</button>
+                <button id="+" type="button">+</button>
             </div>
 
         </div>
