--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>JavaScript Calculator</title>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -11,28 +12,30 @@
         <div class="wrapper">
             <div class="calculator">
                 <div id="output"></div>
-                <button id="AC" type="button">AC</button>
-                <button id="CE" type="button">CE</button>
-                <button id="%" type="button">%</button>
-                <button id="/" type="button">/</button>
-                <button id="7" type="button">7</button>
-                <button id="8" type="button">8</button>
-                <button id="9" type="button">9</button>
-                <button id="x" type="button">x</button>
-                <button id="4" type="button">4</button>
-                <button id="5" type="button">5</button>
-                <button id="6" type="button">6</button>
-                <button id="-" type="button">-</button>
-                <button id="1" type="button">1</button>
-                <button id="2" type="button">2</button>
-                <button id="3" type="button">3</button>
-                <button id="0" type="button">0</button>
-                <button id="." type="button">.</button>
-                <button id="=" type="button">=</button>
-                <button id="+" type="button">+</button>
+                <button id="AC" class="pure-button" type="button">AC</button>
+                <button id="CE" class="pure-button" type="button">CE</button>
+                <button id="%"  class="pure-button" type="button">%</button>
+                <button id="/"  class="pure-button  "type="button">/</button>
+                <button id="7"  class="pure-button" type="button">7</button>
+                <button id="8"  class="pure-button" type="button">8</button>
+                <button id="9"  class="pure-button" type="button">9</button>
+                <button id="x"  class="pure-button" type="button">x</button>
+                <button id="4"  class="pure-button" type="button">4</button>
+                <button id="5"  class="pure-button" type="button">5</button>
+                <button id="6"  class="pure-button" type="button">6</button>
+                <button id="-"  class="pure-button" type="button">-</button>
+                <button id="1"  class="pure-button" type="button">1</button>
+                <button id="2"  class="pure-button" type="button">2</button>
+                <button id="3"  class="pure-button" type="button">3</button>
+                <button id="0"  class="pure-button" type="button">0</button>
+                <button id="."  class="pure-button" type="button">.</button>
+                <button id="="  class="pure-button" type="button">=</button>
+                <button id="+"  class="pure-button" type="button">+</button>
             </div>
 
         </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"> </script>
+
     </main>
 </body>
 
