--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="wrapper">
             <div class="calculator">
                 <div id="output"></div>
+                <div class="buttonContainer">
                 <button id="AC" class="pure-button" type="button">AC</button>
                 <button id="CE" class="pure-button" type="button">CE</button>
                 <button id="%"  class="pure-button" type="button">%</button>
@@ -28,11 +29,11 @@
                 <button id="2"  class="pure-button" type="button">2</button>
                 <button id="3"  class="pure-button" type="button">3</button>
                 <button id="0"  class="pure-button" type="button">0</button>
-                <button id="."  class="pure-button" type="button">.</button>
+                <button id="."  class="pure-button" type="button">.</button>    
                 <button id="="  class="pure-button" type="button">=</button>
                 <button id="+"  class="pure-button" type="button">+</button>
             </div>
-
+</div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"> </script>
 
