--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <main>
         <div class="wrapper">
             <div class="calculator">
-                <div id="output"></div>
+                <div id="output">
+                    <p class="outputResults">0</p>
+                </div>
                 <div class="buttonContainer">
-                <button id="AC" class="pure-button" type="button">AC</button>
-                <button id="CE" class="pure-button" type="button">CE</button>
+                <button id="AC" class="pure-button button-error" type="button">AC</button>
+                <button id="CE" class="pure-button button-error" type="button">CE</button>
                 <button id="%"  class="pure-button" type="button">%</button>
                 <button id="/"  class="pure-button  "type="button">/</button>
                 <button id="7"  class="pure-button" type="button">7</button>
@@ -28,10 +30,11 @@
                 <button id="1"  class="pure-button" type="button">1</button>
                 <button id="2"  class="pure-button" type="button">2</button>
                 <button id="3"  class="pure-button" type="button">3</button>
-                <button id="0"  class="pure-button" type="button">0</button>
-                <button id="."  class="pure-button" type="button">.</button>    
-                <button id="="  class="pure-button" type="button">=</button>
                 <button id="+"  class="pure-button" type="button">+</button>
+                <button id="."  class="pure-button" type="button">.</button> 
+                <button id="0"  class="pure-button" type="button">0</button>
+                <button id="equalSign"  class="pure-button" type="button">=</button>
+                
             </div>
 </div>
         </div>
