--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="buttonContainer">
                 <button id="AC" class="pure-button button-error" type="button">AC</button>
-                <button id="CE" class="pure-button button-error" type="button">CE</button>
+                <button id="CE" class="pure-button button-error" type="button">C</button>
                 <button id="%"  class="pure-button" type="button">%</button>
                 <button id="/"  class="pure-button  "type="button">/</button>
                 <button id="7"  class="pure-button" type="button">7</button>
