--- a/index.html
+++ b/index.html
@@ -12,33 +12,35 @@
         <div class="wrapper">
             <div class="calculator">
                 <div id="output">
-                    <p class="outputResults">0</p>
+                    <p id="display"></p>
                 </div>
                 <div class="buttonContainer">
                 <button id="AC" class="pure-button button-error" type="button">AC</button>
-                <button id="CE" class="pure-button button-error" type="button">C</button>
+                <button id="clear" class="pure-button button-error" type="button">C</button>
                 <button id="%"  class="pure-button" type="button">%</button>
-                <button id="/"  class="pure-button  "type="button">/</button>
-                <button id="7"  class="pure-button" type="button">7</button>
-                <button id="8"  class="pure-button" type="button">8</button>
-                <button id="9"  class="pure-button" type="button">9</button>
-                <button id="x"  class="pure-button" type="button">x</button>
-                <button id="4"  class="pure-button" type="button">4</button>
-                <button id="5"  class="pure-button" type="button">5</button>
-                <button id="6"  class="pure-button" type="button">6</button>
-                <button id="-"  class="pure-button" type="button">-</button>
-                <button id="1"  class="pure-button" type="button">1</button>
-                <button id="2"  class="pure-button" type="button">2</button>
-                <button id="3"  class="pure-button" type="button">3</button>
-                <button id="+"  class="pure-button" type="button">+</button>
-                <button id="."  class="pure-button" type="button">.</button> 
-                <button id="0"  class="pure-button" type="button">0</button>
-                <button id="equalSign"  class="pure-button" type="button">=</button>
+                <button id="divide"  class="pure-button  "type="button">/</button>
+                <button id="seven"  class="pure-button" type="button">7</button>
+                <button id="eight"  class="pure-button" type="button">8</button>
+                <button id="nine"  class="pure-button" type="button">9</button>
+                <button id="multiply"  class="pure-button" type="button">x</button>
+                <button id="four"  class="pure-button" type="button">4</button>
+                <button id="five"  class="pure-button" type="button">5</button>
+                <button id="six"  class="pure-button" type="button">6</button>
+                <button id="subtract"  class="pure-button" type="button">-</button>
+                <button id="one"  class="pure-button" type="button">1</button>
+                <button id="two"  class="pure-button" type="button">2</button>
+                <button id="three"  class="pure-button" type="button">3</button>
+                <button id="add"  class="pure-button" type="button">+</button>
+                <button id="decimal"  class="pure-button" type="button">.</button> 
+                <button id="zero"  class="pure-button" type="button">0</button>
+                <button id="equals"  class="pure-button" type="button">=</button>
                 
             </div>
 </div>
         </div>
+        <script src="https://gitcdn.link/repo/freeCodeCamp/testable-projects-fcc/master/build/bundle.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"> </script>
+        <script src="js/calculator.js"></script>
 
     </main>
 </body>
