changes made to calculator files index.html & calculator.js

--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE>
 <html>
-
 <head>
     <title>JavaScript Calculator</title>
     <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-
 <body>
     <main>
         <div class="wrapper">
@@ -17,7 +15,7 @@
                 <div class="buttonContainer">
                 <button id="AC" class="pure-button button-error" type="button">AC</button>
                 <button id="clear" class="pure-button button-error" type="button">C</button>
-                <button id="%"  class="pure-button" type="button">%</button>
+                <button id="modulus"  class="pure-button" type="button">%</button>
                 <button id="divide"  class="pure-button  "type="button">/</button>
                 <button id="seven"  class="pure-button" type="button">7</button>
                 <button id="eight"  class="pure-button" type="button">8</button>
@@ -34,7 +32,6 @@
                 <button id="decimal"  class="pure-button" type="button">.</button> 
                 <button id="zero"  class="pure-button" type="button">0</button>
                 <button id="equals"  class="pure-button" type="button">=</button>
-                
             </div>
 </div>
         </div>
